[package]
name = "smart-agri-near-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"] 

[dependencies]
near-sdk = { version = "5.14.0", features = ["legacy", "abi", "unit-testing"]}
borsh = "1.5.7"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8.12"
near-abi = "0.4.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
